@@ -43,6 +43,7 @@
  *               dataset (DG);
  * 24-May-2006 : Added new tests (DG);
  * 21-Jun-2007 : Removed JCommon dependencies (DG);
+ * 31-Oct-2007 : New hashCode() test (DG);
  *
  */
 
@@ -738,4 +739,35 @@ public class TimeSeriesTests extends TestCase implements SeriesChangeListener {
         assertEquals(1, series.getItemCount());
         assertTrue(this.gotSeriesChangeEvent);
     }
+    
+    /**
+     * Some simple checks for the hashCode() method.
+     */
+    public void testHashCode() {
+        TimeSeries s1 = new TimeSeries("Test");
+        TimeSeries s2 = new TimeSeries("Test");
+        assertEquals(s1, s2);
+        assertEquals(s1.hashCode(), s2.hashCode());
+        
+        s1.add(new Day(1, 1, 2007), 500.0);
+        s2.add(new Day(1, 1, 2007), 500.0);
+        assertEquals(s1, s2);
+        assertEquals(s1.hashCode(), s2.hashCode());
+        
+        s1.add(new Day(2, 1, 2007), null);
+        s2.add(new Day(2, 1, 2007), null);
+        assertEquals(s1, s2);
+        assertEquals(s1.hashCode(), s2.hashCode());
+        
+        s1.add(new Day(5, 1, 2007), 111.0);
+        s2.add(new Day(5, 1, 2007), 111.0);
+        assertEquals(s1, s2);
+        assertEquals(s1.hashCode(), s2.hashCode());
+
+        s1.add(new Day(9, 1, 2007), 1.0);
+        s2.add(new Day(9, 1, 2007), 1.0);
+        assertEquals(s1, s2);
+        assertEquals(s1.hashCode(), s2.hashCode());
+    }
+    
 }
