@@ -1,3 +1,12 @@
+2007-10-31  David Gilbert  <david.gilbert@object-refinery.com>
+
+	* source/org/jfree/data/ComparableObjectSeries.java
+	(hashCode): Faster implementation,
+	* source/org/jfree/data/time/TimeSeries.java
+	(hashCode): Likewise,
+	* source/org/jfree/data/xy/XYSeriesTests.java
+	(hashCode): Likewise.
+	
 2007-10-29  David Gilbert  <david.gilbert@object-refinery.com>
 
 	* source/org/jfree/chart/plot/dial/SimpleDialFrame.java: 
